# PalworldSaveTools

./: .gitattributes  .gitignore  .gitmodules  FIX_SUMMARY.md  README.md  ROUND_TRIP_FIX_FINAL.md  ROUND_TRIP_FIX_SUCCESS.md  ROUND_TRIP_FIX_SUMMARY.md  __check_common.py  __check_zukan.py  auto_update.py  changelogs.md  check_player_sav.py  license  opencode.jsonc  passive_blocks_output.txt  pst.windows.iss  pyproject.toml  pytest.ini  requirements.txt  setup_freeze.py  start.cmd  start.py  test_bulk_verify.py  test_bulk_verify2.py  test_bulk_verify3.py  test_transfer.py  test_transfer_full.py
.github/: dependabot.yml
.github/templates/: release_notes.md
.github/workflows/: build-all-and-release.yml  build-all-and-test.yml  build-linux.yml  build-mac.yml  build-windows.yml  build.yml  ci.yml  discord.yml  nexus-upload.yml  release-build.yml  release.yml  test-build-macos.yml  test-build.yml
.opencode/: opencode.jsonc
.opencode/instructions/: memory.md
.opencode/plugins/: diff-logger.ts
docs/: breeding_results.md
resources/game_data/: boss_mapping.json  breedingdata.json  characters.json  elementdata.json  friendship.json  itemdata.json  items.json  items_psp.json  npcdata.json  paldata.json  palpassivedata.json  pals_learnset.json  passivedata.json  skilldata.json  (+7 more)
scripts/: add_translation_keys.cmd  add_translation_keys.py  auto_update.cmd  auto_update.py  build_cx.cmd  build_cx.py  clean_code.cmd  clear_fog.cmd  diagnose_save.py  fix_translated_css.py  run_fast_update.py  run_item_update.py  run_pal_update.py  scan_ft_guids.cmd  scan_ft_guids.py  translate_readme.cmd  update_game_data.cmd  update_game_data.py  update_translation_keys.cmd
src/: boot_paths.py  bootup.py  common.py  import_libs.py  loading_manager.py  palobject.py  resource_resolver.py
src/palsav/: LICENSE  README.md  pyproject.toml
src/palsav/palooz/: pyproject.toml  setup.py
src/palsav/palsav/: __init__.py  _cityhash.py  archive.py  cli.py  gvas.py  json_tools.py  palsav.py  paltypes.py
src/palsav/palsav/commands/: __init__.py  auto_update.py  backup.py  convert.py  diag.py  resave_test.py
src/palsav/palsav/compressor/: __init__.py  oozlib.py  zlib.py
src/palsav/palsav/rawdata/: base_camp.py  base_camp_module.py  build_process.py  character.py  character_container.py  common.py  connector.py  debug.py  dynamic_item.py  foliage_model.py  foliage_model_instance.py  group.py  guild_item_storage.py  guild_lab.py  item_container.py  item_container_slots.py  map_concrete_model.py  map_concrete_model_module.py  map_data.py  map_model.py  map_object.py  opaque.py  work.py  work_collection.py  worker_director.py
src/palsav/pyooz/: setup.py
src/palsav/pyooz/.github/workflows/: github-deploy.yml
src/palsav/pyooz/ooz/dep/ooz/scripts/: decompress.py
tests/: conftest.py  test_registry.py
web/: README.md
(+304 files in other folders)
