[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PalworldSaveTools"
version="2.0.0"
description = "All-in-one tool for fixing/transferring/editing Palworld saves"
readme = "readme.md"
license = "MIT"
authors = [{ name = "Pylar" }]
requires-python = ">=3.11"
dependencies = [
    "pyside6-essentials",
    "Pillow",
    "cx-freeze>=8.3.0",
    "nerdfont",

]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "cx-freeze>=8.6.0",
]
