[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PalworldSaveTools"
version="2.0.0"
description = "All-in-one tool for fixing/transferring/editing Palworld saves"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Pylar" }]
requires-python = ">=3.11"
dependencies = [
    "pyside6-essentials",
    "Pillow",
    "cx-freeze>=8.3.0",
    "nerdfont",
    "packaging",
    "palsav-flex",
    "brotli",
    "cbor2",
    "msgpack",
    "zstandard",
    "orjson",
    "py7zr",
    "nuitka>=4.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[tool.uv.sources]
palsav-flex = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "src/palsav",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "cx-freeze>=8.6.0",
    "pytest",
]
